--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "Voice-reactive wave visualization",
   "main": "index.html",
   "scripts": {
-    "start": "http-server . -p 8000 -c-1"
+    "start": "node server.js",
+    "dev": "http-server . -p 8000 -c-1"
+  },
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0"
   }
 }
