--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
