Setup Netlify deployment with Functions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "http-server . -p 8000 -c-1",
-    "build": "echo 'Build complete (no specific build steps defined for this project).'"
+    "build": "echo 'Build complete - ready for Netlify deployment'"
   },
   "type": "module",
   "dependencies": {
